--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,3 +54,18 @@ jwt:
   secret: mySecret #JWT加解密使用的密钥
   expiration: 604800 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
+
+
+secure:
+  ignored:
+    urls:
+      - /
+      - /swagger-ui/
+      - /*.html
+      - /favicon.ico
+      - /**/*.html
+      - /**/*.css
+      - /**/*.js
+      - /swagger-resources/**
+      - /v2/api-docs/**
+      - /actuator/**
